# torchscience

./: .buildinfo  .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  (+1 more)
benchmark/: CMakeLists.txt
tests/: CMakeLists.txt  __init__.py  conftest.py  test_version.py
tests/csrc/: test_operator_templates.py  test_reduction_operators.py
tests/csrc/impl/special_functions/: test_cos_pi.cpp  test_sin_pi.cpp
tests/special_functions/: test__airy_ai.py  test__airy_ai_derivative.py  test__airy_bi.py  test__airy_bi_derivative.py  test__bernoulli_number_b.py  test__bernoulli_polynomial_b.py  test__bessel_j.py  test__bessel_j_derivative.py  test__bessel_y.py  test__bessel_y_derivative.py  test__beta.py  test__binomial_coefficient.py  test__carlson_elliptic_integral_r_f.py  test__chebyshev_polynomial_t.py  test__chebyshev_polynomial_u.py  test__complete_elliptic_integral_e.py  test__complete_elliptic_integral_k.py  test__complete_elliptic_integral_pi.py  test__cos_pi.py  test__cosine_integral_ci.py  test__digamma.py  test__double_factorial.py  test__erf.py  test__erfc.py  test__euler_number_e.py  test__euler_polynomial_e.py  test__euler_totient_phi.py  test__exponential_integral_ei.py  test__factorial.py  test__falling_factorial.py  test__fibonacci_number_f.py  test__gamma.py  test__hankel_h_1.py  test__hankel_h_2.py  test__hermite_polynomial_h.py  test__hermite_polynomial_he.py  test__incomplete_elliptic_integral_e.py  test__incomplete_elliptic_integral_f.py  test__inverse_erf.py  test__inverse_erfc.py  (+53 more)
tests/torchscience/: README.md  __init__.py  test__reduction_macros.py  test__reduction_xmacro.py  test_example.py  test_hypergeometric_2_f_1_benchmarks.py  test_hypergeometric_2_f_1_properties.py  test_operator_registration.py  test_special_functions_api.py
tests/torchscience/coding/: test__morton.py
tests/torchscience/combinatorics/: test__binomial_coefficient.py
tests/torchscience/differentiation/: __init__.py  test__apply.py  test__construction.py  test__integration.py  test__richardson.py  test__scalar_operators.py  test__stencil.py  test__vector_operators.py
tests/torchscience/distance/: __init__.py  test__bhattacharyya_distance.py  test__hellinger_distance.py  test__minkowski_distance.py  test__relationships.py  test__total_variation_distance.py
tests/torchscience/encryption/: test__chacha20.py  test__generator.py  test__hmac.py  test__sha256.py
tests/torchscience/geometry/: test__bvh_integration.py  test__closest_point.py  test__convex_hull.py  test__ray_intersect.py  test__ray_occluded.py
tests/torchscience/geometry/intersection/: test__ray_sphere_intersection.py
tests/torchscience/graph_theory/: test__bellman_ford.py  test__connected_components.py  test__dijkstra.py  test__floyd_warshall.py  test__graph_laplacian.py  test__maximum_bipartite_matching.py  test__minimum_spanning_tree.py  test__pagerank.py
tests/torchscience/information_theory/: test__chi_squared_divergence.py  test__conditional_entropy.py  test__cross_entropy.py  test__f_divergence.py  test__jensen_shannon_divergence.py  test__joint_entropy.py  test__kullback_leibler_divergence.py  test__mutual_information.py  test__mutual_information_relationships.py  test__pointwise_mutual_information.py  test__relationships.py  test__renyi_divergence.py  test__renyi_entropy.py  test__shannon_entropy.py  test__tsallis_entropy.py
tests/torchscience/integral_transform/: __init__.py  test__hilbert_transform.py  test__inverse_hilbert_transform.py
tests/torchscience/noise/: test__blue_noise.py  test__brown_noise.py  test__grey_noise.py  test__pink_noise.py  test__violet_noise.py  test__white_noise.py
tests/torchscience/polynomial/: __init__.py  test__composition.py  test__division.py  test__exceptions.py  test__fitting.py  test__polynomial.py  test__roots.py
tests/torchscience/privacy/: test__exponential.py  test__gaussian.py  test__laplace.py  test__randomized_response.py
tests/torchscience/probability/: test__beta.py  test__binomial.py  test__chi2.py  test__f.py  test__gamma.py  test__normal.py  test__poisson.py
tests/torchscience/root_finding/: __init__.py  test__brent.py
tests/torchscience/space_partitioning/: conftest.py  test__bounding_volume_hierarchy.py  test__k_nearest_neighbors.py  test__kd_tree.py  test__octree.py  test__octree_dynamic.py  test__octree_neighbors.py  test__octree_ray_marching.py  test__octree_sample.py  test__octree_structure_learning.py  test__range_search.py
tests/torchscience/special_functions/: test__airy_ai.py  test__airy_bi.py  test__anger_j.py  test__associated_legendre_polynomial_p.py  test__bessel_j.py  test__bessel_j_0.py  test__bessel_j_1.py  test__bessel_y.py  test__bessel_y_0.py  test__bessel_y_1.py  test__beta.py  test__carlson_elliptic_integral_r_c.py  test__carlson_elliptic_integral_r_d.py  test__carlson_elliptic_integral_r_e.py  test__carlson_elliptic_integral_r_f.py  test__carlson_elliptic_integral_r_g.py  test__carlson_elliptic_integral_r_j.py  test__carlson_elliptic_integral_r_k.py  test__carlson_elliptic_integral_r_m.py  test__charlier_polynomial_c.py  test__chebyshev_polynomial_t.py  test__chebyshev_polynomial_u.py  test__chebyshev_polynomial_v.py  test__chebyshev_polynomial_w.py  test__complete_legendre_elliptic_integral_e.py  test__complete_legendre_elliptic_integral_k.py  test__complete_legendre_elliptic_integral_pi.py  test__confluent_hypergeometric_m.py  test__confluent_hypergeometric_u.py  test__confluent_hypergeometric_u_integer_b.py  test__cos_pi.py  test__cosh_pi.py  test__cosine_integral_ci.py  test__dawson.py  test__digamma.py  test__erfcinv.py  test__erfinv.py  test__exponential_integral_e.py  test__exponential_integral_e_1.py  test__exponential_integral_ei.py  (+115 more)
tests/torchscience/spline/: __init__.py  test__b_spline.py  test__cubic_spline.py  test__tridiagonal.py
tests/torchscience/window_function/: test__rectangular_window.py
(+3678 files in other folders)
