[build-system]
build-backend = "scikit_build_core.build"
requires = [
    "numpy>=2.3.5",
    "scikit-build-core>=0.11.6",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "cmake>=4.2.0",
    "hypothesis>=6.148.7",
    "mpmath>=1.3.0",
    "ninja>=1.13.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "scikit-build-core>=0.11.6",
    "sympy>=1.14.0",
]
docs = [
    "Sphinx>=9.0.4",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-rtd-theme>=3.0.2",
]

[project]
authors = [
    { name = "Allen Goodman", email = "allen.goodman@icloud.com" }
]
dependencies = [
    "numpy>=2.3.5",
    "torch>=2.9.1",
]
description = "PyTorch operators for mathematics, science, and engineering."
name = "torchscience"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[project.optional-dependencies]
test = [
    "numpy>=1.26",
    "pytest>=8.0",
    "hypothesis>=6.100",
    "sympy>=1.12",
]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
minimum-version = "build-system.requires"
wheel.packages = ["src/torchscience"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["F401", "I"]
fixable = ["F401", "I"]

[tool.uv]
cache-keys = [
    { file = "CMakeLists.txt" },
    { file = "pyproject.toml" },
    { file = "src/**/*.{h,c,hpp,cpp}" }
]
# Build without isolation to ensure torch ABI compatibility
# (the isolated build env may have a different torch build than the runtime)
no-build-isolation-package = ["torchscience"]